--- a/syntax.css
+++ b/syntax.css
@@ -13,6 +13,8 @@ body{
     align-items: center;
     height: 100vh;
 }
+
+/* clock  */
 .clock{
     background-color: rgb(49,47,47);
     width: 300px;
